--- a/reserva/templates/dashboard.html
+++ b/reserva/templates/dashboard.html
@@ -45,6 +45,9 @@
         
         <hr>
 
+        {{items.name}}
+
+        <hr>
         <h2>Horários Reservados - Sala E04</h2>
         <div id="calendarRow" class="row d-flex py-2 ">
             <div class="col-md-9 mx-auto">
