--- a/reserva/templates/lista/post-detail.html
+++ b/reserva/templates/lista/post-detail.html
@@ -13,7 +13,7 @@
             <p class="lead fs-6">Postado por {{ post.author }} em {{ post.post }}</p>
 
             <p class="my-3">{{post.content|safe}}</p>
-            <img src="{{post.image.url}}" alt="" width="800px">
+            <!-- <img src="{{post.image.url}}" alt="" width="800px"> -->
         </div>
     </div> 
 </div>
