--- a/reserva/templates/profile.html
+++ b/reserva/templates/profile.html
@@ -93,8 +93,8 @@
                     {{ form|crispy}}
     
                     <div class="row">
-                        <a href="{% url 'mudar-senha' %}" class="btn btn-secondary mx-auto col-md-5">Mudar Senha</a>
-                        <button type="submit" class="btn btn-success mx-auto col-md-5"> Salvar Alterações</button>
+                        <a href="{% url 'mudar-senha' %}" class="btn btn-secondary my-1 mx-auto col-md-5">Mudar Senha</a>
+                        <button type="submit" class="btn btn-success my-1 mx-auto col-md-5"> Salvar Alterações</button>
                     </div>
                 </form>
             </div>
