--- a/reserva/templates/registration/change-password.html
+++ b/reserva/templates/registration/change-password.html
@@ -20,7 +20,7 @@
             {{ form|crispy}}
 
             <div class="row">
-                <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-dark mx-auto col-md-5 butao">Voltar</a>
+                <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-secondary mx-auto col-md-5 butao">Voltar</a>
                 <button type="submit" class="btn btn-success mx-auto col-md-5 butao"> Enviar</button>
             </div>
         </form>
@@ -28,13 +28,4 @@
     </div>
 </div>
 </div>
-{% endblock %}
-
-{% block script %}
-<script>
-    $(document).ready(function(){
-        $("#id_data").mask("00/00/0000");
-        $("#id_hora").mask("00:00:00");
-    });
-</script>
 {% endblock %}
