--- a/reserva/templates/registration/sing-up.html
+++ b/reserva/templates/registration/sing-up.html
@@ -21,7 +21,7 @@
                 <div class="col-sm-12 col-lg-10 ">
                     <div class="wrap d-md-flex">
             
-                        <img src="{% static 'img/cirilo.gif' %}" class="hidden-mobile">
+                        <img src="{% static 'img/logo.png' %}" class="hidden-mobile">
             
                         <div class="login-wrap p-4 p-md-5">
                             <div class="d-flex">
