--- a/reserva/templates/lista/post-list.html
+++ b/reserva/templates/lista/post-list.html
@@ -46,7 +46,9 @@
                 
             </div>
             {% empty %}
-            <h1>Desculpe! Não há postagems!</h1>
+            <div class="row page-content px-lg-3 mx-2 my-4 p-5 text-center">
+                <h1>Desculpe! Não há postagems!</h1>
+            </div>
 
             {% endfor %}
         </div>
