--- a/reserva/templates/lista/inventory.html
+++ b/reserva/templates/lista/inventory.html
@@ -62,7 +62,9 @@
             </div>
 
             {% empty %}
-
+            <div class="row page-content px-lg-3 mx-2 my-4 p-5 text-center">
+                <h1>Desculpe! Não há itens no inventário!</h1>
+            </div>
             {% endfor %}
 
 
